{
    "name": "HUDInputActions",
    "maps": [
        {
            "name": "HUDActions",
            "id": "ae8d0ee5-ee0e-4338-8cc4-8911ac11bec3",
            "actions": [
                {
                    "name": "ToggleMainMenu",
                    "type": "Button",
                    "id": "20841473-99bd-433a-83a0-4f3524412efb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ShowElementalWheel",
                    "type": "Button",
                    "id": "b16af61f-1d5f-4ceb-ac9d-37108dc5da8a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LootInteraction",
                    "type": "Button",
                    "id": "a82118f9-206b-4c05-8137-36acf43d42b3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LootScroll",
                    "type": "Value",
                    "id": "b3797aec-0c3c-4b0f-acb2-fd5e466af57f",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8570186c-a1fe-4951-9bf8-ba491430a5d0",
                    "path": "<Keyboard>/i",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleMainMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a2637e3c-cb47-4cbb-b0f1-b1861b10b3fb",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShowElementalWheel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f2ff6aa3-2ca9-4407-99fc-458cd722dffe",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LootInteraction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "65b08f2f-1736-4290-85f1-841bd8879ea1",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LootScroll",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}